fix: 비동기 로직 LinkedHashMap -> HashMap으로 변경